--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-image: url('http://www.clipartkid.com/images/193/post-it-notes-clipart-clipart-panda-free-clipart-images-K2o9Hl-clipart.png');
+  background-size: cover;
+
+  height: 100vh;
+}
