add image uploader

--- a/app/listTodos.component.html
+++ b/app/listTodos.component.html
@@ -1,6 +1,8 @@
 <h1>
   <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+  <img class="logoimage" src="./app/images/56e3d821129ba16457a699d8480b3025" >
 </h1>
+<button type="button" (click)="uploadFile()">upload image</button>
 
 <div class="listtodowrapper">
   <h2 class="listtodowrapper__item">my task list</h2>
